--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -1341,10 +1341,11 @@
 							</ul>
 						</div>
 						<ul class="ftco-footer-social list-unstyled mt-2">
-							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+							
+							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"><i class="ri-twitter-x-line"></i></span></a></li>
+							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"><i class="ri-facebook-circle-fill"></i></span></a></li>
+							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"><i class="ri-instagram-line"></i></span></a></li>
+							<li class="ftco-animate"><a href="#"><span class="fa fa-linkedin"><i class="ri-linkedin-fill"></i></span></a></li>
 						</ul>
 					</div>
 				</div>
